vlib/v/checker/tests/generics_interface_field_type_err.out
vlib/v/checker/tests/generics_interface_field_type_err.vv:34:18: error: `IComponentStore` type is generic interface, must specify the generic type names, e.g. Foo[T], Foo[int]
   32 | struct Registry {
   33 | pub mut:
   34 |     data map[string]IComponentStore
      |                     ~~~~~~~~~~~~~~~
   35 | }
   36 |
